# np_llm

./: README.md  engagepro_chatbot.py  pyproject.toml
faiss_index/: index.faiss  index.pkl
